--- a/config.yaml
+++ b/config.yaml
@@ -34,7 +34,7 @@ builds:
   #   subsampling_scheme: ssprop_China_old
   #   beast_analysis: 
   #     - 201030_europe3
-      # - 201113_europe3v2 # Uniformative priors for sampling proportions
+  #     - 201113_europe3v2 # Uniformative priors for sampling proportions
   # europe3c:
   #   subsampling_scheme: ssprop_China
   #   beast_analysis: 
@@ -49,7 +49,9 @@ builds:
   # #      - 201211_europe6 # GLM 4 predictors 3 epochs
   # #      - 201215_europe7i2 # GLM 4p 3e with indicators
   # #      - 210113_europe7p2 # GLM 2p 3e with indicators
-          - 210113_europe9fp2 
+  #        - 210113_europe9fp2 
+        - 210120_europe10a
+        - 210120_europe10b
   # dsEurope:
   #     subsampling_scheme: dsprop_6demes
   #     beast_analysis: 
@@ -59,6 +61,7 @@ builds:
 #      beast_analysis: 
 #        - 201211_europe6 # GLM 4 predictors 3 epochs
 #        - 201215_europe7i2 # GLM 4p 3e indicators
+
 
 # Define files used for external configuration. Common examples consist of a
 # list of strains to include and exclude from analyses, a reference sequence to
@@ -415,26 +418,20 @@ refine:
 # BEAST2 analysis settings
 beast:
   # BEAST2 jar file path
-  jar: "/cluster/home/ceciliav/BDMM-Prime.jar"
-  #jar: "/Users/maceci/code/mt-beast-dev/BDMM-Prime/out/artifacts/BDMM_Prime_jar/BDMM-Prime.jar"
+  #jar: "/cluster/home/ceciliav/BDMM-Prime.jar"
+  jar: "/Users/maceci/code/mt-beast-dev/BDMM-Prime/out/artifacts/BDMM_Prime_jar/BDMM-Prime.jar"
   cpus_mcmc: 2
   # List of parallel mcmc chains seeds to run 
-  n_mcmc: [1,2]
+  n_mcmc: [1,2,3]
   # Length of a mcmc chain, it has to be the same length than the one specified in the xml file
   l_mcmc: 10000000
   # Time for mcmc chains in cluster in minutes
   t_mcmc: 7200
   t_traj: 720
-  # Burnin fraction 
+  # Burnin percentage 
   burnin: 10
-  # Log analyser bin
-  log_analyser: loganalyser
   # Minimum ESS value to combine chains
-  min_ess: 0
-  # Log combiner bin
-  log_combiner: logcombiner
-  # Tree annotator bin
-  tree_annotator: treeannotator
+  min_ess: 50
   mcc_heights: "mean"
   # Trajectories
   n_traj: 200
